Verion 0.9.44dev (?? ??? 2004)
  - For external users, use email address as fullname if only an email address
    was given.
  - Fixed bug 81255: when site extras are displayed in popups, reminders
    were not handled properly.  (Yes and No were printed in the wrong place).
  - Fixed bug 872036: Allow '-' in username
  - Fixed bug 892081: Don't allow users to use work hours with end hour
    before start hour (in admin and pref).
  - Fixed bug 858560: Allow adding events more than four years in the future.
  - Fixed bug: Do not list Public Access in assistant_edit.php.
  - Added back "Assistants" link in trailer that was accidentally removed.
  - Fixed bug 914537: Error when user rejects an event.
  - Fixed bug 920796: printer friendly versions of Views were always showing
    the current date
  - Fixed bug 921557: warnings about invalid parameter for localtime().
  - Fixed bug 919038: category selecting was not working when viewing
    another user's calendar.
  - Don't list "Public Access" on list of users for admin to edit.
  - Fixed bug: ${date} was not being handled properly in report templates.
  - Fixed bug 862177: invalid '?' in URL
  - Fixed bug: custom script/stylesheet was not being included on login page
Verion 0.9.43 (10 Mar 2004)
  - Added iCal import
  - Fixed non-translated text in purge.php
  - Removed "Admin" menu from trailer and replaced with a new admin page
    (adminhome.php) that lists all admin functions.
  - Updated documentation in docs directory.
  - In week "view", table columns had wrong width setting
  - In year view, show days with events in bold.  Must enable new
    setting in System Settings since this is CPU-intensive.
  - Fixed bug 877797: edit_user.php would show form for changing password
    even if user.php was configured to not allow changing of passwords.
  - Allow users to enter HTML for the event description.  Includes
    addition to System Settings to enable this feature.  It is not
    enabled by default.