@@ -5,9 +5,13 @@ send_no_cache_header ();
 if ( empty ( $user ) )
   $user = $login;
 
+// Only admin user can specify a username other than his own.
+if ( ! $is_admin && $user != $login )
+  $user = $login;
+
 if ( $auto_refresh == "Y" && ! empty ( $auto_refresh_time ) ) {
   $refresh = $auto_refresh_time * 60; // convert to seconds
-  $HeadX = "<META HTTP-EQUIV=\"refresh\" content=\"$refresh; URL=list_unapproved.php\" TARGET=\"_self\">\n";
+  $HeadX = "<meta http-equiv=\"refresh\" content=\"$refresh; URL=list_unapproved.php\" target=\"_self\">\n";
 }
 $INC = array('js/popups.php');
 print_header($INC,$HeadX);
@@ -18,9 +22,9 @@ $key = 0;
 // Exclude "extension" events (used when an event goes past midnight)
 function list_unapproved ( $user ) {
   global $temp_fullname, $key, $login;
-  //echo "Listing events for $user <BR>";
+  //echo "Listing events for $user <br>";
 
-  echo "<UL>\n";
+  echo "<ul>\n";
   $sql = "SELECT webcal_entry.cal_id, webcal_entry.cal_name, " .
     "webcal_entry.cal_description, " .
     "webcal_entry.cal_priority, webcal_entry.cal_date, " .
@@ -48,7 +52,7 @@ function list_unapproved ( $user ) {
       $duration = $row[6];
       $status = $row[7];
       $divname = "eventinfo-$id-$key";
-      echo "<LI><A CLASS=\"entry\" HREF=\"view_entry.php?id=$id&user=$user";
+      echo "<li><a class=\"entry\" href=\"view_entry.php?id=$id&user=$user";
       echo "\" onMouseOver=\"window.status='" . translate("View this entry") .
         "'; show(event, '$divname'); return true;\" onMouseOut=\"hide('$divname'); return true;\">";
       $timestr = "";
@@ -69,27 +73,34 @@ function list_unapproved ( $user ) {
         }
       }
       echo htmlspecialchars ( $name );
-      echo "</A>";
+      echo "</a>";
       echo " (" . date_to_str ($date) . ")\n";
-      echo ": <A HREF=\"approve_entry.php?id=$id&ret=list&user=$user";
+      echo ": <a href=\"approve_entry.php?id=$id&ret=list&user=$user";
       if ( $user == "__public__" )
         echo "&public=1";
-      echo "\" CLASS=\"navlinks\" onClick=\"return confirm('" .
+      echo "\" class=\"navlinks\" onclick=\"return confirm('" .
         translate("Approve this entry?") .
-        "');\">" . translate("Approve/Confirm") . "</A>, ";
-      echo "<A HREF=\"reject_entry.php?id=$id&ret=list&user=$user";
+        "');\">" . translate("Approve/Confirm") . "</a>, ";
+      echo "<a href=\"reject_entry.php?id=$id&ret=list&user=$user";
       if ( $user == "__public__" )
         echo "&public=1";
-      echo "\" CLASS=\"navlinks\" onClick=\"return confirm('" .
+      echo "\" class=\"navlinks\" onClick=\"return confirm('" .
         translate("Reject this entry?") .
-        "');\">" . translate("Reject") . "</A>";
+        "');\">" . translate("Reject") . "</a>";
+      echo ", <a href=\"del_entry.php?id=$id&ret=list";
+      if ( $user != $login )
+        echo "&user=$user";
+      echo "\" class=\"navlinks\" onclick=\"return confirm('" .
+        translate("Are you sure you want to delete this entry?") .
+        "');\">" . translate("Delete") . "</a>";
+      echo "\n</li>\n";
       $eventinfo .= build_event_popup ( $divname, $user, $description,
         $timestr, $time );
       $count++;
     }
     dbi_free_result ( $res );
   }
-  echo "</UL><P>\n";
+  echo "</ul><p>\n";
   if ( $count == 0 ) {
     user_load_variables ( $user, "temp_" );
     echo translate("No unapproved events for") . " " . $temp_fullname . ".";
@@ -101,7 +112,7 @@ function list_unapproved ( $user ) {
 
 ?>
 
-<H2><FONT COLOR="<?php echo $H2COLOR;?>"><?php etranslate("Unapproved Events")?></FONT></H2>
+<H2><FONT COLOR="<?php echo $H2COLOR;?>"><?php etranslate("Unapproved Events"); if ( $user == '__public__' ) echo " - " . $PUBLIC_ACCESS_FULLNAME; ?></FONT></H2>
 
 <?php
 
@@ -111,7 +122,7 @@ list_unapproved ( ( $is_assistant || $is_nonuser_admin || $is_admin ) ? $user : 
 // Admin users can also approve Public Access events
 if ( $is_admin && $public_access == "Y" &&
   ( empty ( $user ) || $user != '__public__' ) ) {
-  echo "<P><H3>" . translate ( "Public Access" ) . "</H3>\n";
+  echo "<p><h3>" . translate ( "Public Access" ) . "</h3>\n";
   list_unapproved ( "__public__" );
 }
 ?>
